tests/ui/fail/fn_poly.rs
//@error-in-other-file: Unsat

fn left<T, U>(x: (T, U)) -> T {
    x.0
}

fn main() {
    assert!(left((42, 0)) == 0);
}
